// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> renders correctly 1`] = `
<div
  className="input boolean"
>
  <input
    type="checkbox"
    value={true}
  />
</div>
`;

exports[`<FieldsGroup /> renders correctly 1`] = `
<div
  className="fields-group"
/>
`;

exports[`<FileChooser /> renders correctly 1`] = `
<div
  className="input"
>
  <input
    accept={
      Array [
        "image/jpeg",
        "image/png",
        "image/gif",
        "image/webp",
      ]
    }
    type="file"
  />
</div>
`;

exports[`<InputContainer /> renders correctly 1`] = `
<div
  className="input"
/>
`;

exports[`<RadioGroup /> renders correctly 1`] = `
<div
  className="input with_floating_label radio_buttons"
>
  <div
    className="label_input"
  >
    <label />
    <ul />
  </div>
</div>
`;

exports[`<SelectDropdown /> renders correctly 1`] = `
<div
  className="select-wrapper"
>
  <select>
    <option
      value="one"
    >
      One
    </option>
    <option
      value="two"
    >
      Two
    </option>
    <option
      value="three"
    >
      Three
    </option>
  </select>
</div>
`;

exports[`<SimpleForm /> renders correctly 1`] = `
<form
  acceptCharset="UTF-8"
  className="simple_form"
  method="post"
  onSubmit={[Function]}
/>
`;

exports[`<SimpleInput /> renders correctly 1`] = `
<div
  className="input"
>
  <input />
</div>
`;

exports[`<TextInput /> renders correctly 1`] = `
<div
  className="input"
>
  <input
    type="text"
  />
</div>
`;
